--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -182,7 +182,7 @@
                               <div class="title">Data Ingestion</div>
                               <div class="desc_text">Data is fetched from various sources and ingested into the application for accurate search results</div>
                               <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/source-management/source-management/">Learn More <img src="assets/icons/content/carrotright.svg" ></a></span>
+                                <span class="link"><a href="https://docs.kore.ai/searchassist/source-management/source-management/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg" ></a></span>
                               </div>
                             </div>
                           </div>
@@ -194,7 +194,7 @@
                               <div class="title">Index Management</div>
                               <div class="desc_text">Documents and fields are manipulated to customize the data and results as per the business requirements</div>
                               <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/manage-index/index-management/">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                                <span class="link"><a href="https://docs.kore.ai/searchassist/manage-index/index-management/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                               </div>
                             </div>
                           </div>
@@ -206,7 +206,7 @@
                               <div class="title">Result Optimization</div>
                               <div class="desc_text">Results are tuned based on relevance to continuously improve the search experience</div>
                               <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/optimize-results/result-optimization/">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                                <span class="link"><a href="https://docs.kore.ai/searchassist/optimize-results/result-optimization/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                               </div>
                             </div>
                           </div>
@@ -222,7 +222,7 @@
                             <div class="title">Search Experience</div>
                             <div class="desc_text">Search experience is enhanced by defining the presentation of the search inteface and results</div>
                             <div class="learn-more-">
-                              <span class="link"> <a href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"> <a href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
@@ -234,7 +234,7 @@
                             <div class="title">Analytics</div>
                             <div class="desc_text">Measure the performance of your application by providing real-time interactive insights</div>
                             <div class="learn-more-">
-                              <span class="link"> <a href="https://docs.kore.ai/searchassist/analytics/analytics/">Learn More  <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"> <a href="https://docs.kore.ai/searchassist/analytics/analytics/" target="_blank">Learn More  <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
@@ -246,7 +246,7 @@
                             <div class="title">Experiments</div>
                             <div class="desc_text">Multiple index & search configuration can be tested to pick the best one that fulfills business needs</div>
                             <div class="learn-more-">
-                              <span class="link"><a href="https://docs.kore.ai/searchassist/analytics/experiment/">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"><a href="https://docs.kore.ai/searchassist/analytics/experiment/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
