--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -220,7 +220,7 @@
                               <img src="assets/icons/content/carousel-index-manag.svg">
                             </div>
                             <div class="title">Search Experience</div>
-                            <div class="desc_text">Search experience is enhanced by defining the presentation of the search inteface and results</div>
+                            <div class="desc_text">Search experience is enhanced by defining the presentation of the search interface and results</div>
                             <div class="learn-more-">
                               <span class="link"> <a href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
