--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -165,52 +165,61 @@
                     <div class="name"><span>My Smart Assistant</span></div>
                     <div class="info-text">HR tasks</div>
                   </div>
-                  <div class="user-name">Abhilasha Tripathi</div>
+                  <div class="user-name">Abhilasha  Tripathi</div>
                 </div>             
               </div> -->
               <ng-container>
                 <div class="m-title col-12">Explore</div>
-                <div id="demo" class="carousel slide explore-carousel-data" data-interval="false" data-ride="carousel">    
+                <div id="demo" class="carousel slide explore-carousel-data" data-interval="false" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row row-carousels">
-                          <div class="coursel-cards-data col-4">
-                            <div class="inner-c-data data-integration">
-                              <div class="img-block">
-                                <img src="assets/icons/content/carousel-data-inte.svg">
-                              </div>
-                              <div class="title">Data Ingestion</div>
-                              <div class="desc_text">Data is fetched from various sources and ingested into the application for accurate search results</div>
-                              <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/source-management/source-management/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg" ></a></span>
-                              </div>
+                      <div class="row row-carousels">
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data data-integration">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-data-inte.svg">
                             </div>
-                          </div>
-                          <div class="coursel-cards-data col-4">
-                            <div class="inner-c-data index-management">
-                              <div class="img-block">
-                                <img src="assets/icons/content/carousel-index-manag.svg">
-                              </div>
-                              <div class="title">Index Management</div>
-                              <div class="desc_text">Documents and fields are manipulated to customize the data and results as per the business requirements</div>
-                              <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/manage-index/index-management/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="coursel-cards-data col-4">
-                            <div class="inner-c-data result-optimization">
-                              <div class="img-block">
-                                <img src="assets/icons/content/carousel-result-opt.svg">
-                              </div>
-                              <div class="title">Result Optimization</div>
-                              <div class="desc_text">Results are tuned based on relevance to continuously improve the search experience</div>
-                              <div class="learn-more-">
-                                <span class="link"><a href="https://docs.kore.ai/searchassist/optimize-results/result-optimization/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
-                              </div>
+                            <div class="title">Data Ingestion</div>
+                            <div class="desc_text">Data is fetched from various sources and ingested into the
+                              application for accurate search results</div>
+                            <div class="learn-more-">
+                              <span class="link"><a
+                                  href="https://docs.kore.ai/searchassist/source-management/source-management/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data index-management">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-index-manag.svg">
+                            </div>
+                            <div class="title">Index Management</div>
+                            <div class="desc_text">Documents and fields are manipulated to customize the data and
+                              results as per the business requirements</div>
+                            <div class="learn-more-">
+                              <span class="link"><a
+                                  href="https://docs.kore.ai/searchassist/manage-index/index-management/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="coursel-cards-data col-4">
+                          <div class="inner-c-data result-optimization">
+                            <div class="img-block">
+                              <img src="assets/icons/content/carousel-result-opt.svg">
+                            </div>
+                            <div class="title">Result Optimization</div>
+                            <div class="desc_text">Results are tuned based on relevance to continuously improve the
+                              search experience</div>
+                            <div class="learn-more-">
+                              <span class="link"><a
+                                  href="https://docs.kore.ai/searchassist/optimize-results/result-optimization/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item">
                       <div class="row row-carousels">
@@ -220,9 +229,12 @@
                               <img src="assets/icons/content/carousel-index-manag.svg">
                             </div>
                             <div class="title">Search Experience</div>
-                            <div class="desc_text">Search experience is enhanced by defining the presentation of the search interface and results</div>
+                            <div class="desc_text">Search experience is enhanced by defining the presentation of the
+                              search interface and results</div>
                             <div class="learn-more-">
-                              <span class="link"> <a href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"> <a
+                                  href="https://docs.kore.ai/searchassist/search-experience/design-search-experience/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
@@ -232,9 +244,11 @@
                               <img src="assets/icons/content/carousel-analytics.svg">
                             </div>
                             <div class="title">Analytics</div>
-                            <div class="desc_text">Measure the performance of your application by providing real-time interactive insights</div>
+                            <div class="desc_text">Measure the performance of your application by providing real-time
+                              interactive insights</div>
                             <div class="learn-more-">
-                              <span class="link"> <a href="https://docs.kore.ai/searchassist/analytics/analytics/" target="_blank">Learn More  <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"> <a href="https://docs.kore.ai/searchassist/analytics/analytics/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
@@ -244,9 +258,11 @@
                               <img src="assets/icons/content/carousel-data-inte.svg">
                             </div>
                             <div class="title">Experiments</div>
-                            <div class="desc_text">Multiple index & search configuration can be tested to pick the best one that fulfills business needs</div>
+                            <div class="desc_text">Multiple index & search configuration can be tested to pick the best
+                              one that fulfills business needs</div>
                             <div class="learn-more-">
-                              <span class="link"><a href="https://docs.kore.ai/searchassist/analytics/experiment/" target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
+                              <span class="link"><a href="https://docs.kore.ai/searchassist/analytics/experiment/"
+                                  target="_blank">Learn More <img src="assets/icons/content/carrotright.svg"></a></span>
                             </div>
                           </div>
                         </div>
