FLY-4052 issue fixed

--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -265,6 +265,8 @@ html{
     align-items: center;
     .please-wait-message{
         padding-left: 10px;
+        left: 0 !important;
+        top: 0 !important;
     }
 }
 .manage-findlyion-exp-popup{   
