--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -297,7 +297,7 @@
                                                 <div class="dropdown dropdown-open">
                                                     <button class="dropdown-toggle dropdown-input"  data-toggle="dropdown" ngbDropdownToggle>{{'businessRules.' +  ruleObj.contextType | translate}}</button>                                            
                                                     <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>                                                                          
-                                                    <li ngbDropdownItem *ngFor="let contextType of ruleOptions.contextTypes" (click)="ruleSelection(ruleObj,contextType,'contextType')"  [ngClass]="{'active':ruleObj.contextType===contextType}"><a>{{'businessRules.' + contextType | translate}}</a></li>
+                                                      <li class="p-0" ngbDropdownItem *ngFor="let contextType of ruleOptions.contextTypes" (click)="ruleSelection(ruleObj,contextType,'contextType')"  [ngClass]="{'active':ruleObj.contextType===contextType}"><a>{{'businessRules.' + contextType | translate}}</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -322,7 +322,7 @@
                                           </div>
                                           <div class="kr-sg-input-text" *ngIf="ruleObj.contextType ==='userContext'">                               
                                             <input type="text" id="userType" [(ngModel)]="ruleObj.contextCategory" class="input-text">
-                                        </div>
+                                          </div>
                                         
                                       </div>
                                       <div class="col-3 pr-0">
